<resources>
    //reviewpage
    <string name="app_name">My Application2</string>
    <string name="head_string">REVIEWS</string>
    <string name="m1">STAR WARS</string>
    <string name="m2">STAR IS BORN</string>
    <string name="m3">ICE AGE 3</string>
    <string name="back_b">BACK</string>
    <string name="spin">SORT</string>
    <string name="search">Search director:</string>
    <string-array name="sortnames">
        <item>"Stars"</item>
        <item>"A->Z"</item>
    </string-array>
    //mainpage
    <string name="name">FINNKINO</string>
    <string name="review_b">REVIEWS</string>
    <string name="archive_b">MOVIE ARCHIVE</string>
    <string name="sort">SORT</string>

</resources>